[tool.poetry]
name = "orienteering-shiga"
version = "0.1.0"
description = ""
authors = ["Takashi Ichihashi <ta.ichihashi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^6.2.0"
myst-parser = "^2.0.0"
sphinx-book-theme = "^1.0.1"
sphinx-revealjs = "^2.8.0"
sphinx-markdown-tables = "^0.0.17"
sphinxcontrib-actdiag = "^3.0.0"
sphinxcontrib-applehelp = "^1.0.7"
sphinxcontrib-blockdiag = "^3.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinxcontrib-devhelp = "^1.0.5"
sphinxcontrib-htmlhelp = "^2.0.4"
sphinxcontrib-jquery = "^4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-nwdiag = "^2.0.0"
sphinxcontrib-plantuml = "^0.27"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2021.3.14"
docxbuilder = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
